@@ -1,3 +1,8 @@
+2012-07-23 Riccardo Mottola <rm@gnu.org>
+
+	* DBLogger.m
+	Make a runloop iteration before scrolling text.
+
 2012-07-18 Riccardo Mottola <rm@gnu.org>
 
 	* AppController.m
